--- a/etc/nginx.conf
+++ b/etc/nginx.conf
@@ -1,36 +1,18 @@
 
-#user  nobody;
-worker_processes  1;
+server {
 
+  listen 80 default;
 
+  location ^~ /uploads/ {
+    root /home/box/web;
+  }
 
-http {
-    include       mime.types;
-    default_type  application/octet-stream;
+  location ~* ^.+\.\w+$ {
+    root /home/box/web/public;
+  }
 
-    server {
-        listen       80;
-        server_name  localhost;
-
-        #charset koi8-r;
-
-        #access_log  logs/host.access.log  main;
-
-        
-		location ^~/uploads {
-            root    /home/box/web;
-        }
-		location ~* ^.+\.(jpg|jpeg|gif|png)$ {
-            root    /home/box/web/public;
-        }
-		
-		location / {
-            return 404;
-        }
-
-    }
-
-
-
-
+  location / {
+    return 404;
+  }
+  
 }
